# m6

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
m6-alloc/: Cargo.toml
m6-alloc/src/: allocator.rs  config.rs  error.rs  freelist.rs  large.rs  lib.rs  lock.rs  poison.rs  quarantine.rs  size_class.rs  span.rs  stats.rs  traits.rs
m6-arch/: Cargo.toml
m6-arch/src/: cache.rs  cpu.rs  exceptions.rs  lib.rs  mmu.rs  registers.rs  smmu.rs  smp.rs  sync.rs
m6-boot/: Cargo.toml
m6-boot/src/: config.rs  dtb_devices.rs  efi_file.rs  gop.rs  initrd_loader.rs  kernel_loader.rs  lib.rs  main.rs  memory.rs  mmu_jump.rs  page_table.rs
m6-cap/: Cargo.toml
m6-cap/src/: badge.rs  cap.rs  cdt.rs  cnode.rs  cptr.rs  error.rs  lib.rs  ops.rs  rights.rs  root_slots.rs  slot.rs
m6-cap/src/objects/: asid.rs  cnode_obj.rs  dma_pool.rs  endpoint.rs  fault.rs  frame.rs  iospace.rs  irq.rs  mod.rs  page_table.rs  sched.rs  smmu.rs  tcb.rs  timer.rs  untyped.rs  vspace.rs
m6-common/: Cargo.toml
m6-common/src/: addr.rs  boot.rs  lib.rs  memory.rs
m6-kernel/: Cargo.toml  build.rs  kernel.ld
m6-kernel/src/: irq.rs  lib.rs  main.rs  smp.rs
m6-kernel/src/cap/: bootstrap.rs  cdt_storage.rs  cnode_storage.rs  cspace.rs  mod.rs  object_table.rs  tcb_storage.rs
m6-kernel/src/initrd/: elf_loader.rs  mod.rs  tar.rs
m6-kernel/src/ipc/: cap_transfer.rs  endpoint.rs  fault.rs  message.rs  mod.rs  notification.rs  queue.rs
m6-kernel/src/logging/: buffer.rs  logger.rs  mod.rs
m6-kernel/src/memory/: asid.rs  frame.rs  heap.rs  init.rs  layout.rs  mod.rs  translate.rs
m6-kernel/src/sched/: balance.rs  context.rs  dispatch.rs  eevdf.rs  idle.rs  migrate.rs  mod.rs  run_queue.rs  sleep.rs  timer_queue.rs
m6-kernel/src/smmu/: mod.rs  registers.rs
m6-kernel/src/syscall/: asid_ops.rs  cache_ops.rs  cap_ops.rs  error.rs  invoke.rs  iommu_ops.rs  irq_ops.rs  mem_ops.rs  misc_ops.rs  mod.rs  numbers.rs  restricted.rs  tcb_ops.rs  timer_ops.rs  user_ptr.rs
m6-kernel/src/task/: mod.rs  waker.rs
m6-kernel/src/user/: layout.rs  mod.rs  vspace_setup.rs
m6-mmio/: Cargo.toml
m6-mmio/src/: barrier.rs  lib.rs  queue.rs  region.rs
m6-paging/: Cargo.toml
m6-paging/src/: address.rs  lib.rs  permissions.rs  region.rs  traits.rs
m6-paging/src/arch/: mod.rs
m6-paging/src/arch/arm64/: descriptors.rs  mapping.rs  mod.rs  tables.rs
m6-pal/: Cargo.toml
m6-pal/src/: console.rs  dtb.rs  dtb_platform.rs  fb_console.rs  framebuffer.rs  gic.rs  lib.rs  platform.rs  psci.rs  timer.rs
m6-pal/src/boot_uart/: mod.rs
m6-pal/src/boot_uart/drivers/: dw8250.rs  mod.rs  pl011.rs
m6-std/: Cargo.toml
m6-std/src/: alloc_impl.rs  cap.rs  ipc.rs  lib.rs  prelude.rs  process.rs
m6-std/src/io/: error.rs  mod.rs
m6-std/src/rt/: lang_items.rs  mod.rs  providers.rs
m6-std/src/sync/: condvar.rs  mod.rs  mutex.rs  once.rs  rwlock.rs
m6-std/src/thread/: mod.rs
m6-std/src/time/: mod.rs
m6-syscall/: Cargo.toml
m6-syscall/src/: boot_info.rs  cptr.rs  error.rs  invoke.rs  ipc_buffer.rs  lib.rs  numbers.rs
m6-system/: Cargo.toml  build.rs  link.ld
m6-system/src/: elf.rs  io.rs  lib.rs  logger.rs  main.rs  process.rs  rt.rs
m6-system/src/device_mgr/: boot_info.rs  dtb.rs  ipc.rs  main.rs  manifest.rs  mod.rs  pcie.rs  registry.rs  slots.rs  spawn.rs
m6-system/src/drivers/nvme/: command.rs  controller.rs  ipc.rs  main.rs  msix.rs  prp.rs  queue.rs
m6-system/src/drivers/smmu/: main.rs
m6-system/src/drivers/uart_dw8250/: dw8250.rs  ipc.rs  main.rs
m6-system/src/drivers/uart_pl011/: main.rs  pl011.rs
m6-system/src/drivers/usb_dwc3/: cru.rs  main.rs
m6-system/src/drivers/usb_hid/: boot_keyboard.rs  boot_mouse.rs  device.rs  input_event.rs  ipc.rs  main.rs
m6-system/src/drivers/usb_xhci/: executor.rs  hal.rs  ipc.rs  main.rs  xhci.rs
m6-system/src/drivers/virtio_blk/: blk.rs  main.rs  virtio.rs  virtqueue.rs
m6-system/src/services/fat32/: block.rs  error.rs  format.rs  handles.rs  ipc.rs  main.rs
m6-testlib/: Cargo.toml  test.ld
m6-testlib/src/: lib.rs
m6-user/: Cargo.toml
m6-user/.cargo/: config.toml
m6-user/src/: elf.rs  io.rs  lib.rs  main.rs  process.rs
m6-user/src/device_mgr/: boot_info.rs  dtb.rs  ipc.rs  logger.rs  main.rs  manifest.rs  mod.rs  registry.rs  slots.rs  spawn.rs
m6-user/src/drivers/smmu/: ipc.rs  main.rs
m6-user/src/drivers/uart_pl011/: main.rs
m6-user/src/drivers/virtio_blk/: main.rs
m6-user/src/services/fat32/: handles.rs  ipc.rs  main.rs
m6-user/src/smmu_drv/: ipc.rs  main.rs
m6-user/src/uart_pl011/: ipc.rs  main.rs  pl011.rs
m6-user/src/virtio_blk/: blk.rs  ipc.rs  main.rs  virtqueue.rs
scripts/: build-sysroot.sh  qemu-test.sh  run-qemu.sh
targets/: aarch64-unknown-m6.json
