[workspace]
resolver = "3"
members = ["m6-alloc","m6-arch", "m6-boot", "m6-cap", "m6-common", "m6-kernel", "m6-paging", "m6-pal", "m6-syscall", "m6-user"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Michele Preziuso"]
license = "MIT"
repository = "https://github.com/mpreziuso/m6"

[workspace.dependencies]
m6-common = { path = "m6-common" }
m6-paging = { path = "m6-paging" }
m6-arch = { path = "m6-arch" }
m6-pal = { path = "m6-pal" }
m6-cap = { path = "m6-cap" }
m6-syscall = { path = "m6-syscall" }

# ELF parsing
elf_rs = { version = "0.3", default-features = false }

# External dependencies
aarch64-cpu = "11.2.0"
arm-gic = "0.7"
spin = { version = "0.10", default-features = false, features = [
    "mutex",
    "spin_mutex",
    "rwlock",
    "once",
] }
thingbuf = { version = "0.1", default-features = false, features = ["static"] }
log = "0.4"
tock-registers = "0.10"
once_cell_no_std = "0.1"
buddy_system_allocator = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
