[package]
name = "m6-boot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
m6-paging = { workspace = true }
m6-common = { workspace = true }
m6-arch = { workspace = true }
m6-pal = { workspace = true }
log = { workspace = true }
uefi = { version = "0.36", features = ["alloc", "logger", "global_allocator"] }
uefi-raw = "0.10"
elf_rs = { version = "0.3", default-features = false }
fdt = "0.1"