[package]
name = "m6-cap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-based security primitives for the M6 microkernel"

[dependencies]
m6-common = { workspace = true }

[features]
default = []
