[package]
name = "m6-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
m6-common = { workspace = true }
m6-arch = { workspace = true }
m6-pal = { workspace = true }

log = { workspace = true }
spin = { workspace = true }
thingbuf = { workspace = true }
