[package]
name = "m6-paging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
m6-testlib = { path = "../m6-testlib" }

[dependencies]
tock-registers = { workspace = true }
spin = { workspace = true }
m6-common = { workspace = true }