[package]
name = "m6-pal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
m6-common = { workspace = true }
once_cell_no_std = { workspace = true }
spin = { workspace = true }
aarch64-cpu = { workspace = true }
tock-registers = { workspace = true }
arm-gic = { workspace = true }
fdt = "0.1"
embedded-graphics = { version = "0.8", default-features = false }
