[package]
name = "m6-user"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
m6-syscall = { path = "../m6-syscall", features = ["userspace"] }
m6-cap = { path = "../m6-cap" }
m6-common = { path = "../m6-common" }
