[package]
name = "m6-user"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "M6 user applications using m6-std"

[lib]
name = "m6_user"
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/bin/shell.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[dependencies]
# std comes from the custom sysroot
m6-cap = { path = "../m6-cap" }
